--- a/components/00-global/_branding.scss
+++ b/components/00-global/_branding.scss
@@ -1,5 +1,5 @@
 /**
- * _branding$color--scss
+ * _branding.scss
  * Encapsulates branding elements (fonts, colors) based on Urban guidelines$color--
  *
  * Reference: http://urbaninstitute$color--github$color--io/graphics-styleguide/
