Adjusting colors, html for header, css for nav

--- a/components/00-global/_branding.scss
+++ b/components/00-global/_branding.scss
@@ -7,7 +7,7 @@
 
 $color--blue: #1696d2;
 $color--yellow: #FDBF11;
-$color--gray: #D2D2D2;
+$color--gray: #666666;
 $color--magenta: #EC008B;
 $color--green: #55B748;
 $color--space-gray: #332D2F;
