Tapped into global assets

--- a/components/00-global/_global.scss
+++ b/components/00-global/_global.scss
@@ -3,4 +3,5 @@
  * Glboal SCSS for inclusion into main stylesheet.
  */
 
-@import '../node_modules/node-reset-scss/scss/_reset.scss';
+@import '../../node_modules/node-reset-scss/scss/_reset.scss';
+@import '_branding.scss';
