Updates for global styles, making component class names more BEM-like

--- a/components/30-components/graphs/bar/bar.scss
+++ b/components/30-components/graphs/bar/bar.scss
@@ -1,7 +1,7 @@
-.c_bar {
+.c-bar {
   margin-bottom: 2rem;
 
-  .c_bar__container {
+  .c-bar__container {
     div {
       font: 10px sans-serif;
       background-color: steelblue;
