--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -9,7 +9,7 @@
 
   li {
     display: inline-block;
-    margin: 0 1.5rem 0 0;
+    margin: 0 2.25rem 0 0;
     
     ul {
       display: none;
@@ -21,9 +21,19 @@
         display: block;
       }
     }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   a {
     display: inline-block;
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: lato, Arial, sans-serif;
   }
 }
