Enabled inclusion of images

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -13,6 +13,8 @@
   line-height: 90px;
   float: left;
   text-align: center;
+
+  background-image: url('./img/logo-reverse.png');
 }
 
 .header-site__right {
