--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -14,7 +14,7 @@
   float: left;
   text-align: center;
 
-  background-image: url('./img/logo-reverse.png');
+  background-image: url('./img/logo-reverse.svg');
 }
 
 .header-site__right {
