[UICA-13] - Added fonts and stylesheets for using the fonts

--- a/pages/about/about.scss
+++ b/pages/about/about.scss
@@ -1,6 +1,7 @@
 body {
   transition: all 2.5s linear;
   background-color: #CCF;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 
   #container {
     color: #333;
