--- a/components/30-components/basic/text/text.scss
+++ b/components/30-components/basic/text/text.scss
@@ -1,6 +1,10 @@
 
 .c_text {
   background-color: #CFC;
+  font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
   padding: 2em;
-  display: block;
+  h1 {
+    font-family: Lato,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;    
+  }
 }
