--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -3,11 +3,17 @@
 
 body {
   color: $color--gray;
-  font-family: Lato, sans serif;
+  font-family: Lato, Arial, sans-serif;
 }
 
 a {
   color: $color--blue;
+  text-decoration: none;
+  font-weight: 800;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 h1, h2, h3, h4, h5 {
