[UICA-13] - Changed up how fonts were included to get them included via scss

--- a/components/00-global/_vendor.scss
+++ b/components/00-global/_vendor.scss
@@ -5,3 +5,5 @@
  */
 
 @import '../../node_modules/node-reset-scss/scss/_reset.scss';
+@import 'fonts/lato/lato.scss';
+@import 'fonts/montserrat/montserrat.scss';
