--- a/components/00-global/fonts/lato/lato.scss
+++ b/components/00-global/fonts/lato/lato.scss
@@ -1,40 +1,40 @@
 @font-face {
   font-family: 'Lato';
-  src: url('./Lato-Regular.eot');
-  src: url('./Lato-Regular.eot?#iefix') format('embedded-opentype'),
-       url('./Lato-Regular.woff2') format('woff2'),
-       url('./Lato-Regular.woff') format('woff'),
-       url('./Lato-Regular.ttf') format('truetype');
+  src: url('../../00-global/fonts/lato/Lato-Regular.eot');
+  src: url('../../00-global/fonts/lato/Lato-Regular.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/lato/Lato-Regular.woff2') format('woff2'),
+       url('../../00-global/fonts/lato/Lato-Regular.woff') format('woff'),
+       url('../../00-global/fonts/lato/Lato-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Lato';
-  src: url('./Lato-Bold.eot');
-  src: url('./Lato-Bold.eot?#iefix') format('embedded-opentype'),
-       url('./Lato-Bold.woff2') format('woff2'),
-       url('./Lato-Bold.woff') format('woff'),
-       url('./Lato-Bold.ttf') format('truetype');
+  src: url('../../00-global/fonts/lato/Lato-Bold.eot');
+  src: url('../../00-global/fonts/lato/Lato-Bold.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/lato/Lato-Bold.woff2') format('woff2'),
+       url('../../00-global/fonts/lato/Lato-Bold.woff') format('woff'),
+       url('../../00-global/fonts/lato/Lato-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: 'Lato';
-  src: url('./Lato-Italic.eot');
-  src: url('./Lato-Italic.eot?#iefix') format('embedded-opentype'),
-       url('./Lato-Italic.woff2') format('woff2'),
-       url('./Lato-Italic.woff') format('woff'),
-       url('./Lato-Italic.ttf') format('truetype');
+  src: url('../../00-global/fonts/lato/Lato-Italic.eot');
+  src: url('../../00-global/fonts/lato/Lato-Italic.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/lato/Lato-Italic.woff2') format('woff2'),
+       url('../../00-global/fonts/lato/Lato-Italic.woff') format('woff'),
+       url('../../00-global/fonts/lato/Lato-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 @font-face {
   font-family: 'Lato';
-  src: url('./Lato-BoldItalic.eot');
-  src: url('./Lato-BoldItalic.eot?#iefix') format('embedded-opentype'),
-       url('./Lato-BoldItalic.woff2') format('woff2'),
-       url('./Lato-BoldItalic.woff') format('woff'),
-       url('./Lato-BoldItalic.ttf') format('truetype');
+  src: url('../../00-global/fonts/lato/Lato-BoldItalic.eot');
+  src: url('../../00-global/fonts/lato/Lato-BoldItalic.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/lato/Lato-BoldItalic.woff2') format('woff2'),
+       url('../../00-global/fonts/lato/Lato-BoldItalic.woff') format('woff'),
+       url('../../00-global/fonts/lato/Lato-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
