--- a/components/00-global/fonts/montserrat/montserrat.scss
+++ b/components/00-global/fonts/montserrat/montserrat.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('./Montserrat-Regular.eot');
-  src: url('./Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-       url('./Montserrat-Regular.woff2') format('woff2'),
-       url('./Montserrat-Regular.woff') format('woff'),
-       url('./Montserrat-Regular.ttf') format('truetype');
+  src: url('../../00-global/fonts/montserrat/Montserrat-Regular.eot');
+  src: url('../../00-global/fonts/montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+       url('../../00-global/fonts/montserrat/Montserrat-Regular.woff') format('woff'),
+       url('../../00-global/fonts/montserrat/Montserrat-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Montserrat';
-  src: url('./Montserrat-Bold.eot');
-  src: url('./Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-       url('./Montserrat-Bold.woff2') format('woff2'),
-       url('./Montserrat-Bold.woff') format('woff'),
-       url('./Montserrat-Bold.ttf') format('truetype');
+  src: url('../../00-global/fonts/montserrat/Montserrat-Bold.eot');
+  src: url('../../00-global/fonts/montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+       url('../../00-global/fonts/montserrat/Montserrat-Bold.woff2') format('woff2'),
+       url('../../00-global/fonts/montserrat/Montserrat-Bold.woff') format('woff'),
+       url('../../00-global/fonts/montserrat/Montserrat-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
