--- a/components/00-global/_global.scss
+++ b/components/00-global/_global.scss
@@ -5,4 +5,5 @@
 
 @import '_branding.scss';
 @import '_mixins.scss';
-@import '_helpers.scss';
+@import '_breakpoints.scss';
+@import '../../node_modules/breakpoint-sass/stylesheets/breakpoint.scss';
