Adding mobile placeholder button, bringing in tabbordion node module

--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -93,3 +93,18 @@
     margin-left: 4rem;
   }
 }
+
+.header-site__nav-mobile {
+  position: absolute;
+  right: 13px;
+  top: 23px;
+  font-size: 20px;
+
+  @include breakpoint($bp--mid) {
+    display: none;
+  }
+
+  span {
+    margin-left: 6px;
+  }
+}
