Adding data viz example page based on wireframes for more default formatting

--- a/components/00-global/_breakpoints.scss
+++ b/components/00-global/_breakpoints.scss
@@ -1,5 +1,5 @@
 
-$bp--small: 400px;
-$bp--mid: 640px;
-$bp--large: 960px;
-$bp--xlarge: 1200px;
+$bp--small: 400px; // Small-screen display
+$bp--mid: 640px; // Medium-screen display
+$bp--large: 960px; // Large-screen display
+$bp--xlarge: 1200px; // Larger-screen display
