--- a/components/00-global/_global.scss
+++ b/components/00-global/_global.scss
@@ -3,6 +3,7 @@
  * Global SCSS variables for inclusion into main stylesheet.
  */
 
+@import '_variables.scss';
 @import '_branding.scss';
 @import '_mixins.scss';
 @import '_breakpoints.scss';
