--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -11,6 +11,7 @@
 
   li {
     display: inline-block;
+    list-style-type: none;
     margin: 0 2rem 0 0;
 
     @include breakpoint($bp--large) {
@@ -36,25 +37,27 @@
       margin-right: 0;
     }
   }
+}
 
-  a {
+.nav-primary__first-level {
+  & > li > a {
     display: inline-block;
     color: white;
     font-size: 15px;
     font-weight: 300;
     text-transform: uppercase;
     font-family: lato, Arial, sans-serif;
-    line-height: 34px;
+    line-height: 26px;
 
     @include breakpoint($bp--large) {
       line-height: 84px;
       font-size: 19px;
     }
+  }
 
-    &:hover {
-      color: black;
-      border-bottom: 6px solid black;
-      text-decoration: none;
-    }
+  & > li:hover > a {
+    color: black;
+    border-bottom: 6px solid black;
+    text-decoration: none;
   }
 }
