--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -1,9 +1,16 @@
 @import '../../00-global/_vendor.scss';
 @import '../../00-global/_global.scss';
 
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
   color: $color--gray;
   font-family: Lato, Arial, sans-serif;
+  line-height: 1.5;
 }
 
 a {
@@ -22,29 +29,105 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 36px;
-  line-height: 40px;
-  margin-bottom: 18px;
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: $space-double;
+
+  @include breakpoint($bp--mid) {
+    font-size: 36px;
+    line-height: 40px;
+  }
 }
 
 h2 {
   font-size: 24px;
   line-height: 31.2px;
-  margin-bottom: 12px;
+  margin-top: $space-double;
+  margin-bottom: $space-single;
 }
 
 h3 {
   font-size: 20px;
   line-height: 26px;
-  margin-bottom: 10px;
+  margin-top: $space-double;
+  margin-bottom: $space-single;
+  font-weight: 700;
 }
 
 .main {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 3rem 2rem 2rem;
+  padding: 30px 15px;
+
+  @include breakpoint($bp--mid) {
+    padding: 50px 30px;
+  }
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: $space-single;
+}
+
+hr {
+  border: none;
+  border-bottom: 1px solid $color--gray-4;
+  margin-top: 1.6875rem;
+}
+
+ul {
+  margin-bottom: $space-single;
+}
+
+li {
+  list-style-type: disc;
+  margin-left: 1.3rem;
+}
+
+.caption-top {
+  font-size: 15px;
+  font-style: italic;
+  font-weight: 100;
+  margin-bottom: $space-single;
+  color: $color--black;
+
+  @include breakpoint($bp--mid) {
+    width: 552px;
+  }
+}
+
+.placeholder-viz {
+  width: 100%;
+  height: 600px;
+  background: $color--gray-5;
+}
+
+/* Columns */
+
+.grid {
+  @include clearfix();
+
+  @include breakpoint($bp--mid) {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
+
+.col {
+  padding: 0 0 30px 0;
+  @include breakpoint($bp--mid) {
+    float: left;
+    padding: 0 15px 30px;
+  }
+}
+
+.col--2-3 {
+  @include breakpoint($bp--mid) {
+    width: 66.66%;
+  }
+}
+
+.col--1-3 {
+  @include breakpoint($bp--mid) {
+    width: 33.33%;
+  }
 }
