--- a/components/30-components/basic/faq/faq.scss
+++ b/components/30-components/basic/faq/faq.scss
@@ -2,6 +2,6 @@
 
 .c-faq__set__answer {
   margin-bottom: 1.75rem;
-  padding-bottom: 2rem;
+  padding-bottom: $space-double;
   border-bottom: 1px solid $color--gray-4;
 }
