--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -12,16 +12,18 @@
   li {
     display: inline-block;
     list-style-type: none;
-    margin: 0 2rem 0 0;
+    margin: 0 1rem 0 0;
 
+    @include breakpoint($bp--mid) {
+      margin: 0 0.85rem 0 0;
+    }
     @include breakpoint($bp--large) {
-      margin: 0 3rem 0 0;
+      margin: 0 1.25rem 0 0;
+    }
+    @include breakpoint($bp--xlarge) {
+      margin: 0 2rem 0 0;
     }
 
-    @include breakpoint($bp--xlarge) {
-      margin: 0 4rem 0 0;
-    }
-    
     ul {
       display: none;
       position: absolute;
@@ -45,12 +47,20 @@
     color: white;
     font-size: 15px;
     font-weight: 300;
-    text-transform: uppercase;
     font-family: lato, Arial, sans-serif;
     line-height: 26px;
 
+    @include breakpoint($bp--mid) {
+      font-size: 14px;
+      line-height: 30px;
+    }
+
     @include breakpoint($bp--large) {
-      line-height: 84px;
+      line-height: 56px;
+      font-size: 17px;
+      padding-bottom: 2px;
+    }
+    @include breakpoint($bp--xlarge) {
       font-size: 19px;
     }
   }
