--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -46,7 +46,7 @@
     display: inline-block;
     color: white;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: normal;
     font-family: lato, Arial, sans-serif;
     line-height: 26px;
 
@@ -56,11 +56,12 @@
     }
 
     @include breakpoint($bp--large) {
-      line-height: 56px;
+      line-height: 44px;
       font-size: 17px;
       padding-bottom: 2px;
     }
     @include breakpoint($bp--xlarge) {
+      line-height: 56px;
       font-size: 19px;
     }
   }
