--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -1,5 +1,5 @@
-@import '../../00-global/_vendor.scss';
-@import '../../00-global/_global.scss';
+@import '_vendor.scss';
+@import '_global.scss';
 
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
