--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 32px;
   line-height: 36px;
   margin-bottom: $space-double;
 
@@ -40,19 +40,34 @@ h1 {
 }
 
 h2 {
+  font-size: 28px;
+  line-height: 34.2px;
+  margin-top: $space-double;
+  margin-bottom: $space-single;
+}
+
+h3 {
   font-size: 24px;
   line-height: 31.2px;
   margin-top: $space-double;
   margin-bottom: $space-single;
 }
 
-h3 {
+h4 {
   font-size: 20px;
   line-height: 26px;
   margin-top: $space-double;
   margin-bottom: $space-single;
-  font-weight: 700;
 }
+
+h5 {
+  font-size: 17px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: $color--gray-7;
+}
+
+
 
 .main {
   max-width: 1200px;
@@ -83,29 +98,38 @@ li {
   margin-left: 1.3rem;
 }
 
-.caption {
-  font-size: 15px;
-  font-style: italic;
-  font-weight: 100;
-  color: $color--black;
+strong {
+  font-weight: bold;
 }
 
-.caption--top {
-  margin-bottom: $space-single;
+.btn {
+  padding: .5rem 1rem;
+  color: white;
+  background-color: $color--blue;
+  display: inline-block;
+  text-align: center;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: normal;
+  margin-bottom: 1rem;
 
-  @include breakpoint($bp--mid) {
-    width: 552px;
+  &:hover {
+    text-decoration: none;
+    background-color: $color--blue-6;
+  }
+
+  .fa {
+    float: right;
+    margin: 2px 0 0 4px;
   }
 }
 
-.caption--bottom {
-  margin-top: $space-single;
 
-}
 
 .placeholder-viz {
   width: 100%;
-  height: 600px;
+  height: 500px;
   background: $color--gray-5;
 }
 
@@ -156,5 +180,17 @@ li {
 .col--1-3 {
   @include breakpoint($bp--mid) {
     width: 33.33%;
+  }
+}
+
+.col--3-4 {
+  @include breakpoint($bp--large) {
+    width: 80%;
+  }
+}
+
+.col--1-4 {
+  @include breakpoint($bp--large) {
+    width: 20%;
   }
 }
