--- a/components/20-templates/default/components/nav-anchor.scss
+++ b/components/20-templates/default/components/nav-anchor.scss
@@ -1,7 +1,13 @@
 @import '_global.scss';
 
 .nav-anchor {
-  margin-top: 2rem;
+  //margin-top: 0.5rem;
+  margin-left: -15px;
+  margin-right: -15px;
+
+  @include breakpoint($bp--mid) {
+    margin: 0.5rem 0 0 0;
+  }
 
   ul {
     list-style-type: none;
@@ -11,9 +17,26 @@
     list-style-type: none;
     margin: 0;
     border-bottom: 1px solid $color--gray-4;
+    position: relative;
     
     &:last-child {
       border-bottom: none;
+    }
+
+    .fa {
+      position: absolute;
+      top: 0;
+      right: 0;
+      line-height: 53px;
+      width: 38px;
+      z-index: 1;
+      border-left: 1px solid $color--gray-4;
+      padding-left: 10px;
+      background: white;
+
+      @include breakpoint($bp--mid) {
+        display: none;
+      }
     }
   }
 
