--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -44,6 +44,10 @@ h2 {
   line-height: 34.2px;
   margin-top: $space-double;
   margin-bottom: $space-single;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 h3 {
@@ -65,6 +69,16 @@ h5 {
   text-transform: uppercase;
   font-weight: 700;
   color: $color--gray-7;
+}
+
+.heading-accent {
+  &:after {
+    content: '';
+    height: 6px;
+    width: 200px;
+    background-color: $color--yellow;
+    left: 50%;
+  }
 }
 
 
@@ -184,12 +198,18 @@ strong {
 }
 
 .col--3-4 {
+  @include breakpoint($bp--mid) {
+    width: 70%;
+  }
   @include breakpoint($bp--large) {
     width: 80%;
   }
 }
 
 .col--1-4 {
+  @include breakpoint($bp--mid) {
+    width: 30%;
+  }
   @include breakpoint($bp--large) {
     width: 20%;
   }
