--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -25,7 +25,7 @@
     }
 
     ul {
-      display: none;
+      //display: none;
       position: absolute;
     }
 
@@ -49,6 +49,7 @@
     font-weight: normal;
     font-family: lato, Arial, sans-serif;
     line-height: 26px;
+    border-bottom: 6px solid transparent;
 
     @include breakpoint($bp--mid) {
       font-size: 14px;
@@ -70,5 +71,24 @@
     color: black;
     border-bottom: 6px solid black;
     text-decoration: none;
+  }
+}
+
+ul.nav-primary__second-level {
+  background: $color--gray-2;
+  line-height: 35px;
+  width: 100%;
+  margin-left: -32px;
+
+  li {
+    margin: 0;
+  }
+
+  a {
+    padding: .5rem 2rem;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
