--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -25,7 +25,7 @@
     }
 
     ul {
-      //display: none;
+      display: none;
       position: absolute;
     }
 
@@ -67,6 +67,15 @@
     }
   }
 
+  & > li.has-submenu:hover {
+    @include breakpoint($bp--large) {
+      height: 82px;
+    }
+    @include breakpoint($bp--xlarge) {
+      height: 94px;
+    }
+  }
+
   & > li:hover > a {
     color: black;
     border-bottom: 6px solid black;
@@ -75,20 +84,25 @@
 }
 
 ul.nav-primary__second-level {
-  background: $color--gray-2;
+  //background: $color--gray-2;
+  //border-bottom: 1px solid $color--gray-4;
   line-height: 35px;
-  width: 100%;
-  margin-left: -32px;
+  //width: 100%;
+  //margin-left: -22px;
 
   li {
     margin: 0;
   }
 
   a {
-    padding: .5rem 2rem;
+    padding: .5rem 1.5rem;
+    font-size: 15px;
+    font-weight: normal;
+    color: $color--gray-8;
 
     &:hover {
       text-decoration: none;
+      background-color: $color--gray-2;
     }
   }
 }
