--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -4,15 +4,17 @@
   position: relative;
 
   ul {
+    position: relative;
+    display: table;
     list-style-type: none;
     padding: 0;
     margin: 0;
   }
 
   li {
-    display: inline-block;
+    display: table-cell;
     list-style-type: none;
-    margin: 0 1rem 0 0;
+    padding: 0 1rem 0 0;
 
     @include breakpoint($bp--mid) {
       margin: 0 0.85rem 0 0;
