--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -14,12 +14,12 @@
 }
 
 .header-site__logo {
-  background: url('./img/logo-reverse.svg') no-repeat center center;
+  background: url('./img/logo.svg') no-repeat center center;
   display: block;
   width: 90px;
   height: 70px;
   margin: 0 auto;
-  
+
   @include breakpoint($bp--large) {
     width: 120px;
     height: 130px;
@@ -27,10 +27,11 @@
 }
 
 .header-site__logo-wrapper {
-  background: $color--black;
+  background: white;
   width: 120px;
   height: 70px;
   text-align: center;
+  border-bottom: 1px solid $color--gray-4;
 
   @include breakpoint($bp--mid) {
 //    width: 120px;
