more work for header

--- a/components/20-templates/default/components/nav-utility.scss
+++ b/components/20-templates/default/components/nav-utility.scss
@@ -16,7 +16,7 @@
   }
 
   a {
-    background: lighten($color--blue, 10);
+    background: black; /*lighten($color--blue, 10);*/
     display: inline-block;
     font-weight: normal;
     font-size: 13px;
