--- a/components/20-templates/default/components/header.scss
+++ b/components/20-templates/default/components/header.scss
@@ -2,6 +2,7 @@
 
 .header-site {
   width: 100%;
+  border-top: 6px solid black;
   @include clearfix();
 
   @include breakpoint($bp--mid) {
@@ -16,34 +17,32 @@
 .header-site__logo {
   background: url('./img/logo.svg') no-repeat center center;
   display: block;
-  width: 90px;
-  height: 70px;
+  width: 110px;
+  height: 77px;
   margin: 0 auto;
 
   @include breakpoint($bp--large) {
-    width: 120px;
-    height: 130px;
+    width: 114px;
+    height: 124px;
+  }
+  @include breakpoint($bp--xlarge) {
+    width: 140px;
+    height: 127px;
   }
 }
 
 .header-site__logo-wrapper {
   background: white;
   width: 120px;
-  height: 70px;
+  height: 80px;
   text-align: center;
-  border-bottom: 1px solid $color--gray-4;
 
-  @include breakpoint($bp--mid) {
-//    width: 120px;
-//    height: 110px;
-//    float: left;
-//    margin-right: 1.25rem;
-  }
   @include breakpoint($bp--large) {
     float: left;
     width: 150px;
     margin-right: 1.25rem;
-    height: 130px;
+    height: 125px;
+    border-bottom: 1px solid $color--gray-4;
   }
   @include breakpoint($bp--xlarge) {
     width: 200px;
@@ -62,15 +61,6 @@
 .header-site__nav-primary-wrapper {
   display: none;
   background-color: $color--blue;
-
-  @include breakpoint($bp--mid) {
-    //clear: both;
-    //display: block;
-    //height: 37px;
-   //padding-left: 1rem;
-    //border-top: 1px solid white;
-
-  }
 
   @include breakpoint($bp--large) {
     display: block;
@@ -99,7 +89,7 @@
 
 .header-site__title {
   background-color: $color--blue;
-  padding: 1rem 0;
+  padding: .2rem 0 0;
   text-align: center;
   font-size: 15px;
   font-weight: bold;
@@ -110,25 +100,24 @@
   @include breakpoint($bp--mid) {
     font-size: 19px;
     letter-spacing: 2px;
-    //padding: 2.7rem 0 1rem 0;
   }
 
   @include breakpoint($bp--large) {
     background: transparent;
     text-align: left;
-    padding: 2.5rem 0 0 2rem;
+    padding: 2.1rem 0 0 2rem;
     font-size: 24px;
   }
 
   @include breakpoint($bp--xlarge) {
-    padding: 1.7rem 0 0 2rem;
+    padding: 1.3rem 0 0 2rem;
   }
 }
 
 .header-site__nav-mobile {
   position: absolute;
   right: 13px;
-  top: 23px;
+  top: 27px;
   font-size: 20px;
 
   @include breakpoint($bp--large) {
