--- a/components/30-components/basic/text/text.scss
+++ b/components/30-components/basic/text/text.scss
@@ -80,8 +80,14 @@
   }
 }
 
-.faq {
+.c-text__faq {
   background-color: $color--gray-1;
   padding: .5rem 3rem 1.5rem;
   margin: 2rem 0;
+}
+
+.c-text__featured {
+  font-size: 15px;
+  margin-left: 2rem;
+  font-family: georgia, serif;
 }
