--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -32,6 +32,7 @@ h1 {
   font-size: 32px;
   line-height: 36px;
   margin-bottom: $space-double;
+  margin-top: 1rem;
 
   @include breakpoint($bp--mid) {
     font-size: 36px;
@@ -66,9 +67,7 @@ h4 {
 
 h5 {
   font-size: 17px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: $color--gray-7;
+  margin-bottom: 0;
 }
 
 .heading-accent {
@@ -84,12 +83,12 @@ h5 {
 
 
 .main {
-  max-width: 1200px;
+  max-width: 1050px;
   margin: 0 auto;
   padding: 30px 15px;
 
   @include breakpoint($bp--mid) {
-    padding: 60px 30px;
+    padding: 40px 30px;
   }
 }
 
@@ -161,8 +160,25 @@ strong {
 
   @include breakpoint($bp--mid) {
     float: right;
-    margin: 0 0 3rem 4rem;
+    margin: 0 0 2rem 2rem;
   }
+}
+
+.icon {
+  //border-radius: 50%;
+  //border: 1px solid $color--gray-5;
+  background-color: $color--yellow;
+  height: 250px;
+  width: 250px;
+  padding: 1rem;
+}
+
+.icon__teaching {
+  height: 100%;
+  width: 100%;
+  background-color: $color--gray-8;
+  -webkit-mask:  url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
+  mask: url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
 }
 
 
@@ -202,7 +218,7 @@ strong {
     width: 70%;
   }
   @include breakpoint($bp--large) {
-    width: 80%;
+    //width: 80%;
   }
 }
 
@@ -211,6 +227,6 @@ strong {
     width: 30%;
   }
   @include breakpoint($bp--large) {
-    width: 20%;
+    //width: 20%;
   }
 }
