--- a/components/30-components/basic/text/text.scss
+++ b/components/30-components/basic/text/text.scss
@@ -7,6 +7,8 @@
 .c-text__caption {
   font-size: 14px;
   overflow: hidden;
+  line-height: 1.2;
+  color: black;
 }
 
 .c-text__caption--top {
@@ -16,7 +18,6 @@
 .c-text__caption--bottom {
   margin-top: $space-single;
   margin-bottom: $space-single;
-
   border-bottom: 1px solid $color--gray-4;
 }
 
@@ -29,65 +30,63 @@
 }
 
 .c-text__viz-notes {
-  display: table;
-
-  div {
-    margin-bottom: .5rem;
-  }
+  background: url('/img/urban-line.svg') no-repeat bottom right;
+  margin-bottom: 1rem;
+  padding-bottom: 1.5rem;
 
   @include breakpoint($bp--large) {
-    float: left;
-    width: 60%;
-    border-right: 1px solid $color--gray-4;
-    padding-right: 1rem;
-    padding-bottom: 1rem;
+    padding-right: 160px;
+    padding-bottom: 0;
   }
-  @include breakpoint($bp--xlarge) {
-    width: 70%;
+
+  p {
+    margin-bottom: 0.25rem;
   }
-}
-
-.c-text__viz-notes__title {
-  display: table-cell;
-  width: 65px;
-}
-
-.c-text__viz-notes__description {
-  display: table-cell;
 }
 
 .c-text__viz-actions {
-  margin-top: 1rem;
+  text-align: left;
 
   @include breakpoint($bp--large) {
-    margin-top: 0;
-    float: left;
-    padding-left: 1rem;
-    width: 40%;
+    text-align: right;
   }
-  @include breakpoint($bp--xlarge) {
-    width: 30%;
-  }
-
   .btn {
-    width: auto;
     margin-right: 1rem;
 
     @include breakpoint($bp--large) {
-      width: 100%;
       margin-right: 0;
+      margin-left: 1rem;
     }
   }
 }
 
+.c3 .c3-axis path, .c3 .c3-axis line {
+  stroke: $color--gray-7;
+}
+
+.tick tspan {
+  fill: $color--gray-7;
+}
+
+
 .c-text__faq {
   background-color: $color--gray-1;
-  padding: .5rem 3rem 1.5rem;
+  padding: 1rem 1rem 1.5rem;
   margin: 2rem 0;
+
+  @include breakpoint($bp--large) {
+    padding: .5rem 1rem 1.5rem;
+  }
 }
 
 .c-text__featured {
-  font-size: 15px;
-  margin-left: 2rem;
+  font-size: 16px;
+  border: 1px solid $color--gray-4;
   font-family: georgia, serif;
+  padding: 0 1rem .5rem;
+  margin-top: 2rem;
+
+  @include breakpoint($bp--large) {
+    padding: 0 2rem .5rem;
+  }
 }
