--- a/components/20-templates/default/default.scss
+++ b/components/20-templates/default/default.scss
@@ -66,7 +66,7 @@ h4 {
 }
 
 h5 {
-  font-size: 17px;
+  font-size: 18px;
   margin-bottom: 0;
 }
 
@@ -79,8 +79,6 @@ h5 {
     left: 50%;
   }
 }
-
-
 
 .main {
   max-width: 1050px;
@@ -138,8 +136,6 @@ strong {
   }
 }
 
-
-
 .placeholder-viz {
   width: 100%;
   height: 500px;
@@ -165,20 +161,35 @@ strong {
 }
 
 .icon {
-  //border-radius: 50%;
-  //border: 1px solid $color--gray-5;
   background-color: $color--yellow;
-  height: 250px;
-  width: 250px;
-  padding: 1rem;
+  width: 100%;
+  height: 120px;
+  padding: .5rem;
+
+  @include breakpoint($bp--mid) {
+    width: 180px;
+    height: 180px;
+    padding: 2rem;
+  }
+  @include breakpoint($bp--large) {
+    height: 250px;
+    width: 250px;
+    padding: 3rem;
+  }
 }
 
 .icon__teaching {
-  height: 100%;
-  width: 100%;
+  height: 110px;
+  width: 110px;
+  margin: 0 auto;
   background-color: $color--gray-8;
   -webkit-mask:  url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
   mask: url('./components/img/icon-teaching.svg') no-repeat 50% 50%;
+
+  @include breakpoint($bp--mid) {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 
