Getting back styles after new component work

--- a/components/30-components/box/faq_box/faq_box.scss
+++ b/components/30-components/box/faq_box/faq_box.scss
@@ -1,7 +1,8 @@
 @import '_global.scss';
 
 .c-text__faq {
-  background-color: $color--gray-1;
-  padding: .5rem 3rem 1.5rem;
+  border: 1px solid $color--gray-4;
+  padding: .15rem 2rem 1.15rem;
   margin: 2rem 0;
+  font-size: 14px;
 }
