--- a/components/30-components/basic/notes/notes.scss
+++ b/components/30-components/basic/notes/notes.scss
@@ -1,16 +1,19 @@
 @import '_global.scss';
 
 .c-text__viz-notes {
-  display: table;
+  font-size: 12px;
+  color: black;
+  line-height: 1.2;
+  background: url('./img/urban-line.svg') no-repeat bottom right;
+  padding-bottom: 1rem;
 
   @include breakpoint($bp--large) {
-    float: left;
-    width: 60%;
-    border-right: 1px solid $color--gray-4;
-    padding-right: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 0;
+    padding-right: 100px;
   }
-  @include breakpoint($bp--xlarge) {
-    width: 70%;
+
+
+  p {
+    margin-bottom: 0.1rem;
   }
 }
