--- a/components/20-templates/default/components/footer.scss
+++ b/components/20-templates/default/components/footer.scss
@@ -141,6 +141,11 @@ footer {
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 10px;
+    font-size: 24px;
+
+    @include breakpoint($bp--mid) {
+      font-size: 30px;
+    }
   }
 
   .urbanstatement {
