--- a/components/30-components/multipage/multipage.scss
+++ b/components/30-components/multipage/multipage.scss
@@ -1,6 +1,19 @@
 
 @import '_global.scss';
 
+.grid .sticky {
+  .breadcrumb {
+    padding: 20px 0;
+    display: block;
+  }
+}
+.col--1-4 {
+  margin-top: 60px;
+}
+.grid .col--3-4 {
+  float: right;
+}
+
 /**
  * Hack the sticky menu so it doesn't cover the page content
  * while maintaining its position on the page.
@@ -11,15 +24,11 @@
 
   .breadcrumb {
     position: fixed;
-    padding: 20px 0;
   }
 
   .col--1-4 {
-    margin-top: 40px;
     width: 100%;
   }
 }
 
-.grid .col--3-4 {
-  float: right;
-}
+
