--- a/components/30-components/basic/breadcrumb/breadcrumb.scss
+++ b/components/30-components/basic/breadcrumb/breadcrumb.scss
@@ -2,6 +2,6 @@
 
 .breadcrumb {
   background-color: #FFF;
-  background: linear-gradient(#FFF, rgba(0,0,0,0));
+  background: linear-gradient(#FFF 55%, rgba(0,0,0,0));
   width: 100%;
 }
