[UICA-21] - Updates based on PR review.

--- a/components/00-global/_variables.scss
+++ b/components/00-global/_variables.scss
@@ -2,3 +2,5 @@
 $space-half: .5rem;
 $space-single: 1rem;
 $space-double: 1.6875rem;
+$font-lato: Lato, Arial, sans-serif;
+$font-montserrat: Montserrat, Arial, sans-serif;
