--- a/components/20-templates/default/components/nav-primary.scss
+++ b/components/20-templates/default/components/nav-primary.scss
@@ -53,7 +53,7 @@
     color: white;
     font-size: 15px;
     font-weight: normal;
-    font-family: Lato, Arial, sans-serif;
+    font-family: $font-lato;
     line-height: 26px;
     border-bottom: 6px solid transparent;
 
