--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -80,7 +80,7 @@
   
   h2 {
     color: #666666;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $font-montserrat;
     font-size: 32px;
   }
   
