--- a/pages/home.scss
+++ b/pages/home.scss
@@ -1,7 +1,7 @@
 .main {
   > div {
     > p {
-      font-size: 25px;
+      font-size: 23px;
       line-height: 1.3;
       padding: 3em .5em 1em;
       text-align: center;
@@ -10,4 +10,8 @@
       }
     }
   }
+}
+
+.cta__container {
+  padding-top: 1.5rem;
 }
