[UICA-104] - Created StudentProfiles component and added some sample content for it.

--- a/pages/home.scss
+++ b/pages/home.scss
@@ -1,6 +1,7 @@
 @import '_global.scss';
 
 .main {
+  padding-bottom: 0;
   padding-top: 0;
 }
 
@@ -25,16 +26,20 @@
   line-height: 1;
   margin-top: 2rem;
   padding: .5rem 1rem .75rem 1.5rem;
-  text-decoration: none;
+
   &:after {
     content: '>';
     display: inline-block;
     font-size: 26px;
     font-weight: 700;
-    margin-left: 1.5rem;
+    margin-left: 1.25rem;
   }
 }
 
 .cta__container {
-  padding-top: 1.5rem;
+  margin: 1.5rem 0 3rem;
+}
+
+.footer-site__logo-wrapper {
+  background: linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 29%, $color--blue 29%, $color--blue 100%);
 }
