--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -94,6 +94,7 @@
         font-weight: 500;
         &:after {
           content: '>';
+          display: inline-block;
           padding-left: .5rem;
         }
       }
