--- a/components/00-global/_mixins.scss
+++ b/components/00-global/_mixins.scss
@@ -39,6 +39,7 @@
 @mixin inner-fullwidth() {
   left: 50%;
   margin-left: -50vw;
+  overflow: hidden;
   position: relative;
   width: 100vw;
   z-index: 1;
