--- a/components/30-components/basic/student-profiles/student-profiles.scss
+++ b/components/30-components/basic/student-profiles/student-profiles.scss
@@ -3,13 +3,16 @@
 .c-student__profiles {
   @include inner-fullwidth();
   background-color: $color--blue;
-  padding: 3.5rem 15px 6rem;
+  padding: 3.5rem 0 6rem;
   
   .c-student__profiles__inner {
     color: #fff;
-    margin: 0 auto;
+    margin: 0 5%;
     max-width: 1100px;
     text-align: center;
+    @include breakpoint($bp--large) {
+      margin: 0 auto;
+    }
     
     h2 {
       color: #fff;
@@ -28,7 +31,13 @@
     > p {
       font-size: 18px;
       line-height: 1.3;
-      padding: 0 12rem 0;
+      padding: 0 2rem 0;
+      @include breakpoint($bp--mid) {
+        padding: 0 4rem 0;
+      }
+      @include breakpoint($bp--large) {
+        padding: 0 12rem 0;
+      }
     }
     
     ul {
@@ -37,12 +46,32 @@
       li {
         list-style: none;
         display: block;
-        float: left;
-        margin: 0 2% 0 0;
+        margin: 0 0 1.5rem;
         text-align: left;
-        width: 23.5%;
         &:last-child {
-          margin-right: 0;
+          margin-bottom: 0;
+        }
+
+        @include breakpoint($bp--mid) {
+          float: left;
+          margin-right: 4%;
+          width: 48%;
+          &:nth-child(odd) {
+            clear: both;
+          }
+          &:nth-child(even) {
+            margin-right: 0;
+          }
+        }
+        @include breakpoint($bp--large) {
+          margin-bottom: 0;
+          width: 23.5%;
+          &:nth-child(2) {
+            margin-right: 2%;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
         }
       }
     }
