Added padding to cta__container

--- a/components/30-components/basic/home-page-cta/home-page-cta.scss
+++ b/components/30-components/basic/home-page-cta/home-page-cta.scss
@@ -1,5 +1,9 @@
 @import '_global.scss';
 
+.cta__container {
+  margin: 2rem;
+}
+
 .homepage__cta {
   border-top: 4px solid #f5f5f5;
   color: #000;
