--- a/components/30-components/basic/student-profiles/student-profiles.scss
+++ b/components/30-components/basic/student-profiles/student-profiles.scss
@@ -43,17 +43,16 @@
     ul {
       @include clearfix();
       margin: 2rem 0 0;
+      text-align: center;
       li {
         list-style: none;
-        display: block;
+        display: inline-block;
         text-align: left;
-        &:last-child {
-          margin-bottom: 0;
-        }
+        vertical-align: top;
+        margin-bottom: 5rem;
 
         @include breakpoint($bp--mid) {
-          float: left;
-          margin: 1% 1% 1.5rem;
+          margin: 1% 1% 5rem;
           width: 48%;
           /* Make all boxes similar in shape */
           p {
@@ -61,7 +60,6 @@
           }
         }
         @include breakpoint($bp--large) {
-          margin-bottom: 0;
           width: 22%;
           &:nth-child(2) {
             margin-right: 2%;
